force-app/main/default/objects/New_Potential_Adverse_Event__c/New_Potential_Adverse_Event__c.object-meta.xml
<CustomObject>
    <description>Main object to store Adverse Event cases.</description>
    <label>New Potential Adverse Event</label>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>AE Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Potential Adverse Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>