force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/AE_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>AE_Event_Name__c</fullName>
    <label>AE Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>