force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Congenital_Anomaly__c.field-meta.xml
<CustomField>
    <fullName>Congenital_Anomaly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Congenital Anomaly</label>
    <type>Checkbox</type>
</CustomField>