force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Death__c.field-meta.xml
<CustomField>
    <fullName>Death__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Death</label>
    <type>Checkbox</type>
</CustomField>