force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Hospitalization__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospitalization</label>
    <type>Checkbox</type>
</CustomField>