force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Is_Technical_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Is_Technical_Complaint__c</fullName>
    <label>Is Technical Complaint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>