force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Life_Threatening__c.field-meta.xml
<CustomField>
    <fullName>Life_Threatening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Life Threatening</label>
    <type>Checkbox</type>
</CustomField>