force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/MICC_Product_Link__c.field-meta.xml
<CustomField>
    <fullName>MICC_Product_Link__c</fullName>
    <label>MICC Product</label>
    <referenceTo>MICC_Product__c</referenceTo>
    <relationshipLabel>New Potential Adverse Events</relationshipLabel>
    <relationshipName>New_Potential_Adverse_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>