force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Other_Seriousness__c.field-meta.xml
<CustomField>
    <fullName>Other_Seriousness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Seriousness</label>
    <type>Checkbox</type>
</CustomField>