force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Pickup_Status__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Status__c</fullName>
    <label>Pickup Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>