force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Product_Indication__c.field-meta.xml
<CustomField>
    <fullName>Product_Indication__c</fullName>
    <label>Product Indication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>