force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Relevant_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Medical_History__c</fullName>
    <label>Relevant Medical History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>