force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Route_of_administering__c.field-meta.xml
<CustomField>
    <fullName>Route_of_administering__c</fullName>
    <label>Route of administering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>