force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Technical_Complaint_Desc__c.field-meta.xml
<CustomField>
    <fullName>Technical_Complaint_Desc__c</fullName>
    <label>Technical Complaint Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>