force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Technical_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>Technical_Complaint_Number__c</fullName>
    <label>Technical Complaint Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>