force-app/main/default/objects/New_Potential_Adverse_Event__c/fields/Therapy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Therapy_End_Date__c</fullName>
    <label>Therapy End Date</label>
    <type>Date</type>
</CustomField>